web_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flexigym-web-ingress
#  annotations:
#    kubernetes.io/ingress.class: "gce-internal"
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ingress-flexigym
spec:
  backend:
    serviceName: flexigym-angular-app
    servicePort: 8080
  rules:
  - http:
      paths:
      - path: /auth/*
        backend:
          serviceName: web
          servicePort: 5000
      - path: /swagger/*
        backend:
          serviceName: web
          servicePort: 5000
      - path: /packagesApi/*
        backend:
          serviceName: flexigym-advertise-service2
          servicePort: 9100
      - path: /payment/*
        backend:
          serviceName: payment-api
          servicePort: 8000
      - path: /subscribe/*
        backend:
          serviceName: flexigym-subscribe-api
          servicePort: 6200
      - path: /static/*
        backend:
          serviceName: web
          servicePort: 5000
